@@ -1,3 +1,3 @@
 include $(top_srcdir)/build-aux/init.mk
 include $(top_srcdir)/build-aux/doxygen.mk
-include $(top_srcdir)/build-aux/sf.mk
+include $(top_srcdir)/build-aux/sf-doc.mk
